<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">日本艾薇百科</string>
    <string name="exit_dialog_more_girl_text">看看更多更有诱惑的应用？</string>
    <string name="exit_dialog_support_text">求好评，支持一下。</string>
    <string name="exit_dialog_exit_text">退出</string>
    <string name="pic_widget_reset">重置</string>
    <string name="e_gallery_detail_image_save_error_title">保存失败</string>
    <string name="e_gallery_detail_image_save_error_msg">SDCard不可使用</string>
    <string name="e_gallery_detail_image_save_fail_msg">保存失败</string>
    <string name="e_gallery_detail_image_save_success_msg">保存成功：%s</string>
    <string name="e_gallery_detail_image_save">保存</string>
    <string name="ok">确定</string>
    <string name="e_gallery_detail_image_cancel">取消</string>
    <string name="share_title">分享</string>
    <string name="more">更多</string>
    <string name="av_personal_info">列表</string>
    <string name="av_personal_news">绯闻</string>
    <string name="av_gallery_main_news_err_msg">内容获取失败！\n 请查看是否可升级新版或网络后重试！</string>
    <string name="av_gallery_main_news_err_retry">重试</string>
    <string name="av_gallery_main_news_err_setting">设置</string>
    <string name="loading">加载中。。。</string>

</resources>