<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fillall"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <com.prettygirl.app.components.ZoomableImageView
            android:id="@+id/zoomable_image_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/picture_widget_reset"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/bottom_view_bg"
                android:gravity="center"
                android:textColor="@color/dialog_text_light"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:shadowColor="@color/title_text_color"
                android:text="@string/pic_widget_reset" />

            <ImageView
                android:id="@+id/picture_rotate_left"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/bottom_view_bg"
                android:gravity="center"
                android:src="@drawable/pic_widget_left_rotate" />

            <ImageView
                android:id="@+id/picture_rotate_right"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/bottom_view_bg"
                android:gravity="center"
                android:src="@drawable/pic_widget_right_rotate" />

            <ImageView
                android:id="@+id/picture_zoom_in"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/bottom_view_bg"
                android:gravity="center"
                android:src="@drawable/pic_zoom_in" />

            <ImageView
                android:id="@+id/picture_zoom_out"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/bottom_view_bg"
                android:gravity="center"
                android:src="@drawable/pic_zoom_out" />
            
            <Button
                android:id="@+id/picture_widget_save"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/bottom_view_bg"
                android:gravity="center"
                android:textColor="@color/dialog_text_light"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:shadowColor="@color/title_text_color"
                android:text="@string/e_gallery_detail_image_save" />
            
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_bar_height"
        android:background="@drawable/button_bar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/button1"
            style="@style/ButtonStyle"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_weight="1.0"
            android:maxLines="2"
            android:text="@string/e_gallery_detail_image_cancel" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dip"
            android:background="@drawable/button_divider" />

        <Button
            android:id="@+id/button2"
            style="@style/ButtonStyle"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_weight="1.0"
            android:maxLines="2"
            android:text="@string/e_gallery_detail_image_save" />
    </LinearLayout>

    <com.google.ads.AdView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        style="@style/wrap"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="a151519c45abdc0"
        ads:loadAdOnCreate="true" />
    
</LinearLayout>